--- a/index.html
+++ b/index.html
@@ -18,14 +18,13 @@
 				<header>
 					<span class="image avatar"><img src="images/pp.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Melek Tuzlu</a></h1>
-					<p>I got reprogrammed by a rogue AI<br />
-					and now I'm totally cray</p>
+					<p>Computer Science Student</p>
 				</header>
 				<nav id="nav">
 					<ul>
-						<li><a href="#one" class="active">About</a></li>
-						<li><a href="#two">Things I Can Do</a></li>
-						<li><a href="#three">A Few Accomplishments</a></li>
+						<li><a href="#one" class="active">About Me</a></li>
+						<li><a href="#two">Skills</a></li>
+						<li><a href="#three">Workshops</a></li>
 						<li><a href="#four">Contact</a></li>
 					</ul>
 				</nav>
@@ -486,3 +485,4 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	</body>
 
 </html>
+
