--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 								<div class="container">
 									<header class="major">
 										<h2>About Me</h2>
-										<p>Just an incredibly simple responsive site<br />
+										<p>Hi! I'm Melek, a Computer Science student at Lancaster University with a strong interest in AI, Data Science, and UI/UX design, complemented by a passion for creative design and art.<br />
 										template freebie by <a href="http://html5up.net">HTML5 UP</a>.</p>
 									</header>
 									<p>Faucibus sed lobortis aliquam lorem blandit. Lorem eu nunc metus col. Commodo id in arcu ante lorem ipsum sed accumsan erat praesent faucibus commodo ac mi lacus. Adipiscing mi ac commodo. Vis aliquet tortor ultricies non ante erat nunc integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum.</p>
@@ -485,5 +485,6 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	</body>
 
 </html>
+
 
 
