--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 										<p>Hi! I'm Melek, a Computer Science student at Lancaster University with a strong interest in AI, Data Science, and UI/UX design, complemented by a passion for creative design and art.<br />
 										template freebie by <a href="http://html5up.net">HTML5 UP</a>.</p>
 									</header>
-									<p>Faucibus sed lobortis aliquam lorem blandit. Lorem eu nunc metus col. Commodo id in arcu ante lorem ipsum sed accumsan erat praesent faucibus commodo ac mi lacus. Adipiscing mi ac commodo. Vis aliquet tortor ultricies non ante erat nunc integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum.</p>
+									<p>I enjoy building projects that help me learn new technologies and understand how things work behind the scenes. At the moment, I’m focusing on improving my skills in programming, problem‑solving, and real‑world software development. I like exploring new tools, creating small applications, and challenging myself with hands‑on projects. I’m also looking for opportunities to grow as a developer, work on interesting ideas, and collaborate with people who share my enthusiasm for technology.</p>
 								</div>
 							</section>
 
@@ -485,6 +485,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	</body>
 
 </html>
+
 
 
 
