--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
 									<h3>Things I Can Do</h3>
 									<p>My strengths include problem‑solving, teamwork, communication, adaptability, and time management.</p>
 									<ul class="feature-icons">
-										<li class="icon solid fa-code">Write all the code</li>
-										<li class="icon solid fa-cubes">Stack small boxes</li>
-										<li class="icon solid fa-book">Read books and stuff</li>
-										<li class="icon solid fa-coffee">Drink much coffee</li>
-										<li class="icon solid fa-bolt">Lightning bolt</li>
-										<li class="icon solid fa-users">Shadow clone technique</li>
+										<li class="icon solid fa-code">Python, Pandas</li>
+										<li class="icon solid fa-cubes">SQL/ MySQL</li>
+										<li class="icon solid fa-book">HTML / CSS</li>
+										<li class="icon solid fa-coffee">Graphic Design</li>
+										<li class="icon solid fa-bolt">Figma, Canva</li>
+										<li class="icon solid fa-users">Git & GitHub, VS Code</li>
 									</ul>
 								</div>
 							</section>
@@ -485,6 +485,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	</body>
 
 </html>
+
 
 
 
