--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
 								<div class="container">
 									<header class="major">
 										<h2>About Me</h2>
-										<p>Hi! I'm Melek, a Computer Science student at Lancaster University with a strong interest in AI, Data Science, and UI/UX design, complemented by a passion for creative design and art.<br />
-										template freebie by <a href="http://html5up.net">HTML5 UP</a>.</p>
+										<p>Hi! I'm Melek, a Computer Science student at Lancaster University with a strong interest in AI, Data Science, and UI/UX design, complemented by a passion for creative design and art.</p>
 									</header>
 									<p>I enjoy building projects that help me learn new technologies and understand how things work behind the scenes. At the moment, I’m focusing on improving my skills in programming, problem‑solving, and real‑world software development. I like exploring new tools, creating small applications, and challenging myself with hands‑on projects. I’m also looking for opportunities to grow as a developer, work on interesting ideas, and collaborate with people who share my enthusiasm for technology.</p>
 								</div>
@@ -485,6 +484,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	</body>
 
 </html>
+
 
 
 
