--- a/index.html
+++ b/index.html
@@ -110,7 +110,10 @@
 							<section id="four">
 								<div class="container">
 									<h3>Contact Me</h3>
-									<p>Feel free to reach out — I’m always open to new opportunities, collaborations, or questions!</p>
+									<p>Feel free to reach out — I’m always open to new opportunities, collaborations, or questions!<br>
+									📧 Email: <a href="mailto:melektuzlu07@gmail.com">melektuzlu07@gmail.com</a><br>
+									💼 LinkedIn: <a href="www.linkedin.com/in/melek-tuzlu-ba8b9733b">linkedin.com</a><br>
+									🐙 GitHub: <a href="https://github.com/NGL07">github.com</a></p>
 									<form method="post" action="#">
 										<div class="row gtr-uniform">
 											<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
@@ -484,6 +487,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	</body>
 
 </html>
+
 
 
 
