--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 									<h3>Contact Me</h3>
 									<p>Feel free to reach out — I’m always open to new opportunities, collaborations, or questions!<br>
 									📧 Email: <a href="mailto:melektuzlu07@gmail.com">melektuzlu07@gmail.com</a><br>
-									💼 LinkedIn: <a href="www.linkedin.com/in/melek-tuzlu-ba8b9733b">linkedin.com</a><br>
+									💼 LinkedIn: <a href="https://www.linkedin.com/in/melek-tuzlu-ba8b9733b/">linkedin.com</a><br>
 									🐙 GitHub: <a href="https://github.com/NGL07">github.com</a></p>
 									<form method="post" action="#">
 										<div class="row gtr-uniform">
@@ -487,6 +487,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	</body>
 
 </html>
+
 
 
 
