--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 							<section id="three">
 								<div class="container">
 									<h3>Workshops</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+									<p>Gained hands-on experience in HCI through activities that included analyzing user needs, improving interface usability, and applying core UX design methods.</p>
 									<div class="features">
 										<article>
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
@@ -515,6 +515,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	</body>
 
 </html>
+
 
 
 
