--- a/index.html
+++ b/index.html
@@ -85,49 +85,49 @@
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Workshop 1 – Portfolio Website</h4>
-												<p>Description: This is a link to my first workshop submission. Where I created one html page and added to the respository</p>
+												<p>Created and published a personal portfolio website using GitHub Pages, showcasing technical and design skills.</p>
 											</div>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Workshop 2 – Figma Portfolio Redesign</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<p>Applied Figma tools (layers, frames, text, shapes) to redesign a portfolio layout, justifying design choices with usability and storytelling principles.</p>
 											</div>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Workshop 3 – Webpage Redesign in Figma</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<p>Redesigned an existing webpage (Leipzig event calendar or Goodreads) in Figma, applying usability principles to improve layout and user experience.</p>
 											</div>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Workshop 4 – Mobile App Design in Figma</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<p>Designed a mobile app interface by practicing Auto Layout, Components, navigation bars, scrolling, and smart animations, while using metaphors effectively in design.</p>
 											</div>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Workshop 5 – Storyboards, HTA, and Prototypes</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<p>Developed storyboards, performed Hierarchical Task Analysis, and built low‑fidelity prototypes focused on accessibility, clear navigation, and trustworthy booking feedback.</p>
 											</div>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Workshop 6 – UX Design Mapping</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<p>Created a user journey map for a cinema booking app transaction, applying UX design methodologies to visualize user interactions and pain points.</p>
 											</div>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Workshop 7 – Usability Testing</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<p>Conducted a usability study of the cinema booking prototype, evaluating efficiency, error handling, navigation, and overall user experience.</p>
 											</div>
 										</article>
 									</div>
@@ -515,6 +515,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	</body>
 
 </html>
+
 
 
 
