--- a/index.html
+++ b/index.html
@@ -84,7 +84,11 @@
 										<article>
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Workshop 1 – Portfolio Website</h4>
+												<h4>
+													<a href="https://ngl07.github.io/HCI/" target="_blank">
+														Workshop 1 – Portfolio Website
+													</a>
+												</h4>
 												<p>Created and published a personal portfolio website using GitHub Pages, showcasing technical and design skills.</p>
 											</div>
 										</article>
@@ -515,6 +519,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	</body>
 
 </html>
+
 
 
 
