--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/pp.jpg" alt="" /></span>
+					<span class="image avatar"><img src="images/pp.jpg" alt="" class="profile-pic" /></span>
 					<h1 id="logo"><a href="#">Melek Tuzlu</a></h1>
 					<p>Computer Science Student</p>
 				</header>
@@ -519,6 +519,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	</body>
 
 </html>
+
 
 
 
