--- a/index.html
+++ b/index.html
@@ -95,42 +95,66 @@
 										<article>
 											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Workshop 2 – Figma Portfolio Redesign</h4>
+												<h4>
+													<a href="https://www.figma.com/design/8wlcBG1DBn9nfOYg322k9R/WS2-Portfolio-Redesign?node-id=0-1&t=O1rVCJUIFhUOitPj-1" target="_blank">
+														Workshop 2 – Figma Portfolio Redesign
+													</a>
+												</h4>
 												<p>Applied Figma tools (layers, frames, text, shapes) to redesign a portfolio layout, justifying design choices with usability and storytelling principles.</p>
 											</div>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Workshop 3 – Webpage Redesign in Figma</h4>
+												<h4>
+													<a href="https://www.figma.com/design/8f8bO8qxZYtKgHZlMs6Dbg/WS3-Webpage-Redesign?node-id=0-1&t=89tELfv6lviGDuyg-1" target="_blank">
+														Workshop 3 – Webpage Redesign in Figma
+													</a>
+												</h4>
 												<p>Redesigned an existing webpage (Leipzig event calendar or Goodreads) in Figma, applying usability principles to improve layout and user experience.</p>
 											</div>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Workshop 4 – Mobile App Design in Figma</h4>
+												<h4>
+													<a href="https://www.figma.com/design/S7HwUFyvoohcrDh4XrtGWY/WS4-App-Design?node-id=1-3&t=YrpApzVb5Lyn9uSG-1" target="_blank">
+														Workshop 4 – Mobile App Design in Figma
+													</a>
+												</h4>
 												<p>Designed a mobile app interface by practicing Auto Layout, Components, navigation bars, scrolling, and smart animations, while using metaphors effectively in design.</p>
 											</div>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Workshop 5 – Storyboards, HTA, and Prototypes</h4>
+												<h4>
+													<a href="https://www.figma.com" target="_blank">
+														Workshop 5 – Storyboards, HTA, and Prototypes
+													</a>
+												</h4>
 												<p>Developed storyboards, performed Hierarchical Task Analysis, and built low‑fidelity prototypes focused on accessibility, clear navigation, and trustworthy booking feedback.</p>
 											</div>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Workshop 6 – UX Design Mapping</h4>
+												<h4>
+													<a href="https://www.canva.com/design/DAG7Jal6TJI/Gg4_u2WCjNfJvG_fKtOfwQ/edit?utm_content=DAG7Jal6TJI&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank">
+														Workshop 6 – UX Design Mapping
+													</a>
+												</h4>
 												<p>Created a user journey map for a cinema booking app transaction, applying UX design methodologies to visualize user interactions and pain points.</p>
 											</div>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Workshop 7 – Usability Testing</h4>
+												<h4>
+													<a href="https://docs.google.com/document/d/1YlxeI1gQWwegasJTnM_miFS2lC1a5NHyJU2LLggkEsQ/edit?usp=sharing" target="_blank">
+														Workshop 7 – Usability Testing
+													</a>
+												</h4>
 												<p>Conducted a usability study of the cinema booking prototype, evaluating efficiency, error handling, navigation, and overall user experience.</p>
 											</div>
 										</article>
@@ -519,6 +543,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	</body>
 
 </html>
+
 
 
 
