--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/pp.jpg" alt="" style="width:150px; height:150px; object-fit:cover; border-radius:50%;" /></span>
+					<span class="image avatar"><img src="images/pp.jpg" alt="Profile picture" /></span>
 					<h1 id="logo"><a href="#">Melek Tuzlu</a></h1>
 					<p>Computer Science Student</p>
 				</header>
@@ -543,6 +543,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	</body>
 
 </html>
+
 
 
 
