--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 						<!-- Two -->
 							<section id="two">
 								<div class="container">
-									<h3>Things I Can Do</h3>
+									<h3>Skills</h3>
 									<p>My strengths include problem‑solving, teamwork, communication, adaptability, and time management.</p>
 									<ul class="feature-icons">
 										<li class="icon solid fa-code">Python, Pandas</li>
@@ -543,6 +543,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	</body>
 
 </html>
+
 
 
 
