--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>
-													<a href="https://www.figma.com" target="_blank">
+													<a href="https://docs.google.com/document/d/e/2PACX-1vTyCDgTJn3PD-fAx40vBR2fMk_vsoyBSQ0Kg5cwBiuo5rKZTvjZo6a0tIdzRGSgzM8Cz-_8UTpPBTQH/pub" target="_blank">
 														Workshop 5 – Storyboards, HTA, and Prototypes
 													</a>
 												</h4>
@@ -543,6 +543,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	</body>
 
 </html>
+
 
 
 
