--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>
-													<a href="https://www.figma.com/design/S7HwUFyvoohcrDh4XrtGWY/WS4-App-Design?node-id=1-3&t=YrpApzVb5Lyn9uSG-1" target="_blank">
+													<a href="https://www.figma.com/proto/S7HwUFyvoohcrDh4XrtGWY/WS4-App-Design?node-id=1-3&t=ax4UNPznfBf1pQhZ-1" target="_blank">
 														Workshop 4 – Mobile App Design in Figma
 													</a>
 												</h4>
@@ -543,6 +543,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	</body>
 
 </html>
+
 
 
 
