--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>
-													<a href="https://www.figma.com/design/8f8bO8qxZYtKgHZlMs6Dbg/WS3-Webpage-Redesign?node-id=0-1&t=89tELfv6lviGDuyg-1" target="_blank">
+													<a href="https://www.figma.com/proto/8f8bO8qxZYtKgHZlMs6Dbg/WS3-Webpage-Redesign?node-id=1-2&p=f&t=gAHY0C2ZtYtcGCc8-1&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1" target="_blank">
 														Workshop 3 – Webpage Redesign in Figma
 													</a>
 												</h4>
@@ -543,6 +543,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	</body>
 
 </html>
+
 
 
 
