--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>
-													<a href="https://www.canva.com/design/DAG7Jal6TJI/Gg4_u2WCjNfJvG_fKtOfwQ/edit?utm_content=DAG7Jal6TJI&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank">
+													<a href="https://www.canva.com/design/DAG7Jal6TJI/BV8Z2P66i1OttdT6PIV8yA/view?utm_content=DAG7Jal6TJI&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h7679c2e84d" target="_blank">
 														Workshop 6 – UX Design Mapping
 													</a>
 												</h4>
@@ -543,6 +543,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	</body>
 
 </html>
+
 
 
 
