--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>
-													<a href="https://docs.google.com/document/d/1YlxeI1gQWwegasJTnM_miFS2lC1a5NHyJU2LLggkEsQ/edit?usp=sharing" target="_blank">
+													<a href="https://docs.google.com/document/d/e/2PACX-1vSIM3wRBXMLx-0pDYMUFbC6C0920_Eb3ORIwGVsLOQ8ZvSjrrRsJWQkDtuDqrN_nB0KAV-plPLqlOK3/pub" target="_blank">
 														Workshop 7 – Usability Testing
 													</a>
 												</h4>
@@ -543,6 +543,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	</body>
 
 </html>
+
 
 
 
