--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>
-													<a href="https://https://www.figma.com/proto/8wlcBG1DBn9nfOYg322k9R/WS2-Portfolio-Redesign?node-id=103-3&p=f&t=7WSqy7FwY2PmkqZN-1&scaling=contain&content-scaling=fixed&page-id=0%3A1" target="_blank">
+													<a href="https://www.figma.com/proto/8wlcBG1DBn9nfOYg322k9R/WS2-Portfolio-Redesign?node-id=103-3&p=f&t=7WSqy7FwY2PmkqZN-1&scaling=contain&content-scaling=fixed&page-id=0%3A1" target="_blank">
 														Workshop 2 – Figma Portfolio Redesign
 													</a>
 												</h4>
@@ -543,6 +543,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	</body>
 
 </html>
+
 
 
 
