--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 									✉️ Email: <a href="mailto:melektuzlu07@gmail.com">melektuzlu07@gmail.com</a><br>
 									👤 LinkedIn: <a href="https://www.linkedin.com/in/melek-tuzlu-ba8b9733b/">linkedin.com</a><br>
 									👩🏽‍💻 GitHub: <a href="https://github.com/NGL07">github.com</a></p>
-									<form method="post" action="#">
+									<form action="mailto:melektuzlu07@gmail.com" method="post" enctype="text/plain">
 										<div class="row gtr-uniform">
 											<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
 											<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
@@ -543,6 +543,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	</body>
 
 </html>
+
 
 
 
