--- a/index.html
+++ b/index.html
@@ -178,7 +178,11 @@
 											<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="6"></textarea></div>
 											<div class="col-12">
 												<ul class="actions">
-													<li><input type="submit" class="primary" value="Send Message" /></li>
+													<li>
+														<a href="mailto:melektuzlu07@gmail.com?subject=Contact%20Form&body=Hello%20Melek,%0D%0A%0D%0A">
+															<input type="button" class="primary" value="Send Message" />
+														</a>
+													</li>
 													<li><input type="reset" value="Reset Form" /></li>
 												</ul>
 											</div>
@@ -543,6 +547,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	</body>
 
 </html>
+
 
 
 
